--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,8 @@
 </div>
 <div class="content">
   <h2>Contact</h2>
-  <h3>Contact Me Here</h3>
+  <h3>Please fill out your email and name, as well as a message below.</h3>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScVyBdtHsRljO86wgwAo-v1sB_i_Y7mnyVcDjfOskFb1nvCiQ/viewform?embedded=true" width="650" height="700" frameborder="1" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
 <footer>
   <p>&copy; 2026 My Website. All rights reserved.</p>
