--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,12 @@
 </div>
 
 <div id="navbar">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
+  <a href="home.html">Home</a>
   <a href="projects.html">Projects</a>
   <a class="active" href="contact.html">Contact</a>
 </div>
+
+
 <div class="content">
   <h2>Contact</h2>
   <h3>Please fill out your email and name, as well as a message below.</h3>
