--- a/projects.html
+++ b/projects.html
@@ -14,16 +14,29 @@
 </div>
 
 <div id="navbar">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
+  <a href="home.html">Home</a>
   <a class="active" href="projects.html">Projects</a>
   <a href="contact.html">Contact</a>
 </div>
-<div class="content">
-  <h2>Projects</h2>
-  <h3>Home Server</h3>
-  <h3>Arch Build</h3>
+
+<div class="progress-container">
+    <div class="progress-bar" id="myBar"></div>
+  </div>
+
+<div class="tab">
+  <button class="tablinks active" onclick="openProject(event, 'homeServer')">Home Server</button>
+  <button class="tablinks" onclick="openProject(event, 'archBuild')">Arch Build</button>
 </div>
+
+<div id="homeServer" class="tabcontent">
+  <h3>Home Server</h3>
+  <p>London is the capital city of England.</p>
+</div>
+<div id="archBuild" class="tabcontent">
+  <h3>Arch Build</h3>
+  <p>Paris is the capital of France.</p>
+</div>
+
 <footer>
   <p>&copy; 2026 My Website. All rights reserved.</p>
 </footer>
