--- a/projects.html
+++ b/projects.html
@@ -23,20 +23,22 @@
     <div class="progress-bar" id="myBar"></div>
   </div>
 
-<div class="tab">
+<div class="sidenav">
   <button class="tablinks active" onclick="openProject(event, 'homeServer')">Home Server</button>
   <button class="tablinks" onclick="openProject(event, 'archBuild')">Arch Build</button>
 </div>
 
-<div id="homeServer" class="tabcontent">
-  <h3>Home Server</h3>
-  <p>London is the capital city of England.</p>
-</div>
-<div id="archBuild" class="tabcontent">
-  <h3>Arch Build</h3>
-  <p>Paris is the capital of France.</p>
-</div>
+<div class ="main">
+  <div id="homeServer" class="tabcontent">
+    <h3>Home Server</h3>
+    <p>London is the capital city of England.</p>
+  </div>
 
+  <div id="archBuild" class="tabcontent">
+    <h3>Arch Build</h3>
+    <p>Paris is the capital of France.</p>
+  </div>
+</div>
 <footer>
   <p>&copy; 2026 My Website. All rights reserved.</p>
 </footer>
